--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,54 +6,40 @@
 #    By: abeznik <abeznik@student.codam.nl>           +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/10/03 16:11:35 by abeznik       #+#    #+#                  #
-#    Updated: 2021/10/04 18:48:37 by abeznik       ########   odam.nl          #
+#    Updated: 2021/10/04 22:17:21 by anonymous     ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	=	utils.a
 
-SOURCES	=	ft_putchar.c \
-			ft_putstr.c \
-			ft_putnbr.c \
-			ft_hex_conv.c \
-			ft_hexlong_conv.c \
-			ft_tolower.c \
+SRCS	=	ft_intlen.c \
 			ft_itoa.c \
-			ft_utoa.c \
+			ft_putchar.c \
+			ft_putnbr.c \
+			ft_putstr.c \
 			ft_strlen.c \
-			ft_intlen.c \
-			pf_uprint.c \
+			ft_tolower.c \
 
-OBJS	=	$(SOURCES:.c=.o)
+OBJS	=	$(SRCS:.c=.o)
 
 CC		=	gcc
 RM		=	rm -f
-FLAGS	=	-c -Wall -Wextra -Werror
+CFLAGS	=	-Wall -Werror -Wextra -I.
 
 all:		$(NAME)
 
 $(NAME):	$(OBJS)
 	ar cr $(NAME) $(OBJS)
-	@echo
 
 norme:
-	norminette ./$(SOURCES)
-	@echo
+	norminette ./$(SRCS)
 
 clean:
 	$(RM) $(OBJS)
-	@echo
 
 fclean: clean
 	$(RM) $(NAME)
-	@echo
 
 re: fclean all
-	@echo
 
 .PHONY: fclean re norme all clean
-	@echo
-
-bonus: $(OBJS)
-	$(CC) $(FLAGS) $(OBJS)
-	ar cr $(NAME) $(OBJS)
